// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateTimeView should render 1`] = `
<ViewLayout
  bodyElement={
    <div
      className="theme-body"
    >
      <div
        className="theme-date"
      >
        <withI18nextTranslation(CalendarGesture(DatePicker))
          allowFocus={true}
          calendar={
            Object {
              "monthIndex": 5,
              "year": 2006,
            }
          }
          goToNextMonth={[Function]}
          goToPreviousMonth={[Function]}
          onSelect={[MockFunction]}
          t={[Function]}
        />
      </div>
      <div
        className="theme-time"
      >
        <withI18nextTranslation(TimePicker)
          allowFocus={true}
          onChange={[MockFunction]}
          t={[Function]}
          value={
            Object {
              "hours": "15",
              "minutes": "45",
            }
          }
        />
      </div>
    </div>
  }
  header={
    Object {
      "leftElement": <Action
        aria-label="Go to previous month"
        className="btn-tertiary btn-info"
        icon="talend-arrow-left"
        label=""
        onClick={[Function]}
        tabIndex="-1"
      />,
      "middleElement": <HeaderTitle
        button={
          Object {
            "aria-label": "Switch to month and year pickers view",
            "onClick": [MockFunction],
            "tabIndex": 0,
          }
        }
        monthIndex={5}
        year={2006}
      />,
      "rightElement": <Action
        aria-label="Go to next month"
        className="btn-tertiary btn-info"
        icon="talend-arrow-left"
        iconTransform="rotate-180"
        label=""
        onClick={[Function]}
        tabIndex="-1"
      />,
    }
  }
/>
`;

exports[`DateTimeView should render without timePicker 1`] = `
<ViewLayout
  bodyElement={
    <div
      className="theme-body"
    >
      <div
        className="theme-date"
      >
        <withI18nextTranslation(CalendarGesture(DatePicker))
          allowFocus={true}
          calendar={
            Object {
              "monthIndex": 5,
              "year": 2006,
            }
          }
          goToNextMonth={[Function]}
          goToPreviousMonth={[Function]}
          onSelect={[MockFunction]}
          t={[Function]}
        />
      </div>
    </div>
  }
  header={
    Object {
      "leftElement": <Action
        aria-label="Go to previous month"
        className="btn-tertiary btn-info"
        icon="talend-arrow-left"
        label=""
        onClick={[Function]}
        tabIndex="-1"
      />,
      "middleElement": <HeaderTitle
        button={
          Object {
            "aria-label": "Switch to month and year pickers view",
            "onClick": [MockFunction],
            "tabIndex": 0,
          }
        }
        monthIndex={5}
        year={2006}
      />,
      "rightElement": <Action
        aria-label="Go to next month"
        className="btn-tertiary btn-info"
        icon="talend-arrow-left"
        iconTransform="rotate-180"
        label=""
        onClick={[Function]}
        tabIndex="-1"
      />,
    }
  }
/>
`;
